--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -174,6 +174,7 @@ paths <- yaml::read_yaml(
     }
   )
 )
+create_dir(paths$data$source$spectra$lotus_isdb$pos)
 utils::download.file(
   url = paths$urls$example_spectral_lib,
   destfile = paths$data$source$spectra$lotus_isdb$pos
