--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -174,14 +174,14 @@ paths <- yaml::read_yaml(
     }
   )
 )
-create_dir(paths$data$source$spectra$lotus_isdb$pos)
+create_dir(paths$data$source$spectra$lotus$pos)
 utils::download.file(
   url = paths$urls$example_spectral_lib,
-  destfile = paths$data$source$spectra$lotus_isdb$pos
+  destfile = paths$data$source$spectra$lotus$pos
 )
 utils::download.file(
   url = paths$urls$example_spectral_lib,
-  destfile = paths$data$source$spectra$lotus_isdb$neg
+  destfile = paths$data$source$spectra$lotus$neg
 )
 ```
 
