--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -176,11 +176,11 @@ paths <- yaml::read_yaml(
 )
 create_dir(paths$data$source$spectra$lotus$pos)
 utils::download.file(
-  url = paths$urls$example_spectral_lib,
+  url = paths$urls$examples$spectral_lib,
   destfile = paths$data$source$spectra$lotus$pos
 )
 utils::download.file(
-  url = paths$urls$example_spectral_lib,
+  url = paths$urls$examples$spectral_lib,
   destfile = paths$data$source$spectra$lotus$neg
 )
 ```
