--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -46,6 +46,22 @@ To download it LOTUS structure-organism pairs locally, just run:
 library("timaR")
 ```
 
+
+```{r include = FALSE}
+paths <- yaml::read_yaml(
+  file = "paths.yaml",
+  handlers = list(
+    seq = function(x) {
+      purrr::list_flatten(x)
+    }
+  )
+)
+
+paths$tests$mode <- "yes"
+
+yaml::write_yaml(x = paths, file = "paths.yaml")
+```
+
 #### LOTUS
 
 ```{r}
