--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -182,11 +182,11 @@ paths <- yaml::read_yaml(
 )
 create_dir(paths$data$source$spectra$lotus$pos)
 utils::download.file(
-  url = paths$urls$examples$spectral_lib,
+  url = paths$urls$examples$spectral_lib$pos,
   destfile = paths$data$source$spectra$lotus$pos
 )
 utils::download.file(
-  url = paths$urls$examples$spectral_lib,
+  url = paths$urls$examples$spectral_lib$neg,
   destfile = paths$data$source$spectra$lotus$neg
 )
 ```
