--- a/vignettes/III-formatting.Rmd
+++ b/vignettes/III-formatting.Rmd
@@ -27,16 +27,14 @@ For the moment, we support annotations coming from 3 different annotation tools:
 * [SIRIUS](https://bio.informatik.uni-jena.de/software/sirius)
 * Formatted results of **ISDB** annotation.
 
-In order to perform MS2 annotation based on an **I**n **S**ilico **D**ata**B**ase, please follow the following steps. 
+In order to perform MS2 annotation based on an **I**n **S**ilico **D**ata**B**ase, please follow the following steps.
 
-### ISDB
+### Spectral
+
+#### ISDB
 
 ```{r}
 library("timaR")
-```
-
-```{r}
-source(file = "inst/scripts/prepare_isdb_lotus.R")
 ```
 
 ```{r}
@@ -46,15 +44,40 @@ source(file = "inst/scripts/process_spectra.R")
 In case, a python implementation of the spectral matching steps is also available at: <https://github.com/mandelbrot-project/spectral_lib_matcher>.
 The python version also includes more elaborated similarity measures.
 
-### Sirius, GNPS, and others
+And as before:
 
-For Sirius and GNPS, please follow their own documentation.
-If you have some annotations coming from a different tool, please format them as the provided examples.
+```{r}
+source(file = "inst/scripts/prepare_spectral_matches.R")
+```
 
-#### SIRIUS
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+targets::tar_visnetwork(names = starts_with("annotations_spectral_is"),targets_only = TRUE, degree_from = 8)
+```
+
+#### GNPS
+
+We also provide an example GNPS job id, which is: `96fa7c88200e4a03bee4644e581e3fb0`
+
+Before running the corresponding code, do not forget to modify `config/user/prepare_*yourAnnotationTool*.yaml`.
+
+Depending on the annotation tool you used, you can format its results using:
+
+```{r}
+source(file = "inst/scripts/prepare_gnps.R")
+```
+
+You now have all your spectral annotations:
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+targets::tar_visnetwork(names = starts_with("annotations_spectral"),targets_only = TRUE, degree_from = 8)
+```
+
+### Fingerprint-based
+
+#### Sirius
 
 As SIRIUS jobs are long to perform, we provide an already computed SIRIUS Workspace.
-It has beeen generated on the same MGF as the GNPS and ISDB jobs with the following command:
+It has been generated on the same MGF as the GNPS and ISDB jobs with the following command:
 
 ```{bash eval=FALSE, include=TRUE}
 config --IsotopeSettings.filter true --FormulaSearchDB BIO,COCONUT,GNPS,KNAPSACK,UNDP,PLANTCYC --Timeout.secondsPerTree 0 --FormulaSettings.enforced HCNOP --Timeout.secondsPerInstance 0 --AdductSettings.detectable [[M + H3N + H]+, [M - H2O + H]+, [M + K]+, [M - H4O2 + H]+, [M + H]+, [M + Na]+] --UseHeuristic.mzToUseHeuristicOnly 650 --AlgorithmProfile orbitrap --IsotopeMs2Settings IGNORE --MS2MassDeviation.allowedMassDeviation 5.0ppm --NumberOfCandidatesPerIon 1 --UseHeuristic.mzToUseHeuristic 300 --FormulaSettings.detectable B,Cl,Br,Se,S --NumberOfCandidates 10 --ZodiacNumberOfConsideredCandidatesAt300Mz 10 --ZodiacRunInTwoSteps true --ZodiacEdgeFilterThresholds.minLocalConnections 10 --ZodiacEdgeFilterThresholds.thresholdFilter 0.95 --ZodiacEpochs.burnInPeriod 2000 --ZodiacEpochs.numberOfMarkovChains 10 --ZodiacNumberOfConsideredCandidatesAt800Mz 50 --ZodiacEpochs.iterations 20000 --AdductSettings.enforced , --AdductSettings.fallback [[M + K]+, [M + H]+, [M + Na]+] --FormulaResultThreshold true --InjectElGordoCompounds true --StructureSearchDB BIO,COCONUT,GNPS,KNAPSACK,UNDP,PLANTCYC --RecomputeResults false formula zodiac fingerprint structure canopus
@@ -74,30 +97,14 @@ You can get the example running:
 source(file = "inst/scripts/get_example_sirius.R")
 ```
 
-#### GNPS
-
-We also provide an example GNPS job id, which is: `96fa7c88200e4a03bee4644e581e3fb0`
-
-### Formatting
-
-Before running the corresponding code, do not forget to modify `config/user/prepare_*yourAnnotationTool*.yaml`.
-
-Depending on the annotation tool you used, you can format its results using:
-
-```{r eval=FALSE, include=TRUE}
-source(file = "inst/scripts/prepare_gnps.R")
-```
-
-and/or
+Then prepare it:
 
 ```{r}
-source(file = "inst/scripts/prepare_spectral_matches.R")
+source(file = "inst/scripts/prepare_sirius.R")
 ```
 
-and/or
-
-```{r eval=FALSE, include=TRUE}
-source(file = "inst/scripts/prepare_sirius.R")
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+targets::tar_visnetwork(names = starts_with("annotations_s"),targets_only = TRUE, degree_from = 8)
 ```
 
 You now have your annotations well prepared and can keep on formatting the rest of your metadata.
@@ -154,6 +161,12 @@ Before running the corresponding code, do not forget to modify `config/user/prep
 
 ```{r}
 source(file = "inst/scripts/prepare_taxa.R")
+```
+
+You are almost there! See already all the steps accomplished!
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+targets::tar_visnetwork(names = starts_with("features"),targets_only = TRUE, degree_from = 8)
 ```
 
 We now recommend you to read the [next vignette](https://taxonomicallyinformedannotation.github.io/tima-r/articles/IV-processing.html).
