--- a/vignettes/II-inputs.Rmd
+++ b/vignettes/II-inputs.Rmd
@@ -23,14 +23,7 @@ This vignette describes how to prepare:
 * All inputs you need
 
 ```{r include = FALSE}
-paths <- yaml::read_yaml(
-  file = "paths.yaml",
-  handlers = list(
-    seq = function(x) {
-      purrr::list_flatten(x)
-    }
-  )
-)
+paths <- yaml::read_yaml(file = "paths.yaml")
 
 paths$tests$mode <- "yes"
 paths$urls$examples$spectra <- paths$urls$examples$spectra_mini
