--- a/vignettes/I-intro.Rmd
+++ b/vignettes/I-intro.Rmd
@@ -49,20 +49,22 @@ Each step of the whole pipeline will be described next.
 library(targets)
 Sys.setenv(TAR_WARN = "false")
 targets::tar_visnetwork(
-  names = starts_with("annotations"),
-  exclude = c(
-    contains("config"),
-    contains("input"),
-    contains("paths"),
-    contains("params"),
-    contains("_pos"),
-    contains("_neg"),
-    contains("library_sop_lotus"),
-    contains("library_sop_closed")
-  ),
-  targets_only = TRUE,
-  degree_from = 8,
-  level_separation = 200
+        names = starts_with("annotations"),
+        exclude = c(
+                contains("config"),
+                contains("gnps"),
+                contains("input"),
+                contains("paths"),
+                contains("params"),
+                contains("_merged"),
+                contains("_neg"),
+                contains("_pos"),
+                contains("library_sop_lotus"),
+                contains("library_sop_closed")
+        ),
+        targets_only = TRUE,
+        degree_from = 8,
+        level_separation = 200
 )
 ```
 
