--- a/vignettes/III-formatting.Rmd
+++ b/vignettes/III-formatting.Rmd
@@ -21,21 +21,36 @@ This vignette describes how to format all your files.
 
 ## Structural annotations of your features
 
-For the moment, we support annotations coming from 3 different annotation tools: 
+For the moment, we support annotations coming from 4 different annotation tools: 
 
+* MS1 exact mass-based library search
 * [GNPS](https://gnps.ucsd.edu)
 * [SIRIUS](https://bio.informatik.uni-jena.de/software/sirius)
 * Formatted results of **ISDB** annotation.
 
-In order to perform MS2 annotation based on an **I**n **S**ilico **D**ata**B**ase, please follow the following steps.
+### MS1-based
 
-### Spectral
-
-#### ISDB
+These annotations are of the lowest possible quality.
+However, they allow to annotate unusual adducts, in-source fragments thanks to different small tricks implemented.
+Try to really restrict the adduct list and structure-organism pairs you want to consider as possibilities explode rapidly.
 
 ```{r}
 library("timaR")
 ```
+
+```{r}
+source(file = "inst/scripts/annotate_ms1.R")
+```
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+targets::tar_visnetwork(names = starts_with("annotations_ms1"), targets_only = TRUE, degree_from = 8)
+```
+
+### Spectral
+
+In order to perform MS2 annotation based on an **I**n **S**ilico **D**ata**B**ase, please follow the following steps.
+
+#### ISDB
 
 ```{r}
 source(file = "inst/scripts/process_spectra.R")
@@ -123,9 +138,8 @@ We are currently also working on CANOPUS integration for chemical class annotati
 
 ### Case when no network available
 
-If no network was generated, simply use the `fake_features_edges` and `fake_features_components` steps instead of the `prepare_features_edges` and `prepare_features_components` steps.
-This will mimic a false network that allows to proceed to the next steps.
-However, this will not help chemical weighting.
+If no network was generated, we will be generating some.
+Development follows...
 
 If needed, you can get an example of what your minimal feature table should look like by running (no parameters needed):
 
@@ -135,7 +149,11 @@ source(file = "inst/scripts/get_example_features.R")
 
 ### Formatting
 
-Before running the corresponding code, do not forget to modify `config/user/prepare_features_edges.yaml`, and `config/user/prepare_features_components.yaml` accordingly.
+Before running the corresponding code, do not forget to modify `config/user/prepare_features.yaml`, `config/user/prepare_features_edges.yaml`, and `config/user/prepare_features_components.yaml` accordingly.
+
+```{r}
+source(file = "inst/scripts/prepare_features.R")
+```
 
 ```{r}
 source(file = "inst/scripts/prepare_features_edges.R")
