--- a/vignettes/III-formatting.Rmd
+++ b/vignettes/III-formatting.Rmd
@@ -73,7 +73,7 @@ targets::tar_visnetwork(names = starts_with("annotations_spectral_is"), targets_
 
 We also provide an example GNPS job id, which is: `96fa7c88200e4a03bee4644e581e3fb0`
 
-Before running the corresponding code, do not forget to modify `config/user/prepare_*yourAnnotationTool*.yaml`.
+Before running the corresponding code, do not forget to modify `params/user/prepare_*yourAnnotationTool*.yaml`.
 
 Depending on the annotation tool you used, you can format its results using:
 
@@ -149,7 +149,7 @@ source(file = "inst/scripts/get_example_features.R")
 
 ### Formatting
 
-Before running the corresponding code, do not forget to modify `config/user/prepare_features_tables.yaml`, `config/user/prepare_features_edges.yaml`, and `config/user/prepare_features_components.yaml` accordingly.
+Before running the corresponding code, do not forget to modify `params/user/prepare_features_tables.yaml`, `params/user/prepare_features_edges.yaml`, and `params/user/prepare_features_components.yaml` accordingly.
 
 ```{r}
 source(file = "inst/scripts/prepare_features_tables.R")
@@ -170,7 +170,7 @@ If all your features come from a single extract, it will attribute the biologica
 If you have multiple extracts aligned, it will take the *n* (according to your parameters) highest intensities of your aligned feature table and attribute the biological source of corresponding extracts.
 It can take both manual inputs or GNPS metadata directly from your GNPS job ID.
 
-Before running the corresponding code, do not forget to modify `config/user/prepare_taxa.yaml`.
+Before running the corresponding code, do not forget to modify `params/user/prepare_taxa.yaml`.
 
 ```{r}
 source(file = "inst/scripts/prepare_taxa.R")
